Uploaded image for project: 'Qt Creator'
  1. Qt Creator
  2. QTCREATORBUG-14237

Recursive template instantiation of template type doesn't work

XMLWordPrintable

    • 81721f678122bc66213b5f2a5fbf36c43e5e1a35

      I know the subject is vague, but it's quite hard to define the problem in one sentence

      Use-case:

      template<typename _Tp>
      struct Temp { typedef _Tp value_type; };
      
      struct Foo { int bar; };
      
      void func()
      {
          Temp<Temp<Foo> >::value_type::value_type *p;
          p->bar; // bar not highlighted
          Temp<Temp<Foo>::value_type>::value_type *p2;
          p2->bar; // bar highlighted
      }
      

        No reviews matched the request. Check your Options in the drop-down menu of this sections header.

            orgads Orgad Shaneh
            orgads Orgad Shaneh
            Votes:
            0 Vote for this issue
            Watchers:
            1 Start watching this issue

              Created:
              Updated:
              Resolved:

                There are no open Gerrit changes